--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,4 +1,8 @@
+<%- include('partials/header') %>
+
 <h1>This is the campgrounds page!</h1>
+
+<a href="/campgrounds/new">Add new campground</a>
 
 <% campgrounds.forEach(campground => { %>
     <div>
@@ -6,3 +10,7 @@
         <img src="<%= campground.image %>" alt="campground image">
     </div>
 <% }) %>
+
+<a href="/campgrounds/new">Add new campground</a>
+
+<%- include('partials/footer') %>
