--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,16 +1,38 @@
 <%- include('partials/header') %>
 
-<h1>This is the campgrounds page!</h1>
+<div class="container">
+    <header class="jumbotron">
+        <div class="container">
+            <h1>Welcome to YelpCamp!</h1>
+            <p>View our hand-picked campgrounds from all over the world!</p>
+            <p>
+                <a class="btn btn-primary btn-lg" href="/campgrounds/new"
+                    >Add new Campground</a
+                >
+            </p>
+        </div>
+    </header>
 
-<a href="/campgrounds/new">Add new campground</a>
-
-<% campgrounds.forEach(campground => { %>
-    <div>
-        <h4><%= campground.name %></h4>
-        <img src="<%= campground.image %>" alt="campground image">
+    <div class="row">
+        <div>
+            <h3>Out Most Popular Campgrounds:</h3>
+        </div>
     </div>
-<% }) %>
 
-<a href="/campgrounds/new">Add new campground</a>
+    <div class="row">
+        <% campgrounds.forEach(campground => { %>
+        <div class="col-md-3 col-sm-6">
+            <div class="img-thumbnail">
+                <img src="<%= campground.image %>" alt="campground image" />
+                <div class="caption">
+                    <h4><%= campground.name %></h4>
+                </div>
+            </div>
+        </div>
+        <% }) %>
+    </div>
+
+    <a href="/campgrounds/new">Add new campground</a>
+</div>
 
 <%- include('partials/footer') %>
