--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,14 +1,35 @@
 <%- include('partials/header') %>
 
+<div class="container">
+    <h1 style="text-align: center">Create a new Campground</h1>
+    <div class="row">
+        <div style="width: 30%; margin: 30px auto">
+            <form action="/campgrounds" method="POST">
+                <div class="form-group">
+                    <input
+                        class="form-control"
+                        type="text"
+                        name="name"
+                        placeholder="name"
+                    />
+                </div>
 
-<h1>Create a new Campground</h1>
-
-<a href="/campgrounds">Go back</a>
-
-<form action="/campgrounds" method="POST">
-    <input type="text" name="name" placeholder="name">
-    <input type="text" name="image" placeholder="image url">
-    <button>Submit</button>
-</form>
-
+                <div class="form-group">
+                    <input
+                        class="form-control"
+                        type="text"
+                        name="image"
+                        placeholder="image url"
+                    />
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-lg btn-block btn-primary">
+                        Submit
+                    </button>
+                </div>
+            </form>
+            <a href="/campgrounds">Go back</a>
+        </div>
+    </div>
+</div>
 <%- include('partials/footer') %>
