--- a/views/index-campgrounds.ejs
+++ b/views/index-campgrounds.ejs
@@ -27,6 +27,7 @@
                 <div class="caption">
                     <h4><%= campground.name %></h4>
                 </div>
+                <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
             </div>
         </div>
         <% }) %>
