--- a/views/new.ejs
+++ b/views/new.ejs
@@ -18,6 +18,15 @@
                     <input
                         class="form-control"
                         type="text"
+                        name="description"
+                        placeholder="description"
+                    />
+                </div>
+
+                <div class="form-group">
+                    <input
+                        class="form-control"
+                        type="text"
                         name="image"
                         placeholder="image url"
                     />
