--- a/views/index-campgrounds.ejs
+++ b/views/index-campgrounds.ejs
@@ -15,7 +15,7 @@
 
     <div class="row">
         <div>
-            <h3>Out Most Popular Campgrounds:</h3>
+            <h3>Our Most Popular Campgrounds:</h3>
         </div>
     </div>
 
