--- a/views/show-campground.ejs
+++ b/views/show-campground.ejs
@@ -4,4 +4,8 @@
 <img src="<%= campground.image %>" alt="Campground Image" />
 <p><%= campground.description %></p>
 
+<% campground.comments.forEach((comment) => { %>
+    <p><%= comment.text %> ~ <i><%= comment.author %> </i></p>    
+<% }) %> 
+
 <%- include('partials/footer') %>
