--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') %>
+<%- include('../partials/header') %>
 
 <div class="container">
     <header class="jumbotron">
@@ -36,4 +36,4 @@
     <a href="/campgrounds/new">Add new campground</a>
 </div>
 
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
