--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') %>
+<%- include('../partials/header') %>
 
 <div class="container">
     <h1 style="text-align: center">Create a new Campground</h1>
@@ -41,4 +41,4 @@
         </div>
     </div>
 </div>
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
