--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,7 @@
             rel="stylesheet"
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         />
+        <link rel="stylesheet" href="/stylesheets/main.css" />
     </head>
     <body>
         <nav class="navbar navbar-default">
@@ -24,4 +25,5 @@
                 </div>
             </div>
         </nav>
-
+    </body>
+</html>
