--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,12 +1,44 @@
 <%- include('../partials/header') %>
 
-<h1><%= campground.name %></h1>
-<img src="<%= campground.image %>" alt="Campground Image" />
-<p><%= campground.description %></p>
-<p><a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add new Campground</a></p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <p class="lead">YelpCamp</p>
+            <div class="list-group">
+                <li class="list-group-item active" >Info 1</li>
+                <li class="list-group-item">Info 2</li>
+                <li class="list-group-item">Info 3</li>
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div class="thumbnail">
+                <img class="img-responsive" src="<%= campground.image %>" alt="Campground Image" />
+                <div class="caption-full">
+                    <h4 class="pull-right">$9.00/night</h4>
+                    <h4><a><%= campground.name %></a></h4>
+                    <p><%= campground.description %></p>
+                </div>
+            </div>
+            <div class="well">
+                <div class="text-left">
+                    <p><a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add new Campground</a></p>
+                </div>
+                <hr>
+                <% campground.comments.forEach((comment) => { %>
+                    <div class="row">
+                        <div class="col-md-12">
+                            ~<i><%= comment.author %> </i>
+                            <span class="pull-right">10 days ago</span>
+                            <p><%= comment.text %> </p>    
+                        </div>
+                    </div>
+                <% }) %> 
 
-<% campground.comments.forEach((comment) => { %>
-    <p><%= comment.text %> ~ <i><%= comment.author %> </i></p>    
-<% }) %> 
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 <%- include('../partials/footer') %>
