--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,17 +26,22 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
+                    <% if(!currentUser) { %>
                     <li class="nav-item">
                         <a class="nav-link" href="/login">Log in</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/register">Sign up</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/logout">Log out</a>
-                    </li>
+                    <% } else { %>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Signed in as: <%= currentUser.username %></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout">Log out</a>
+                        </li>
+                    <% } %>
                 </ul>
             </div>
         </nav>
-    </body>
-</html>
+
