--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -21,7 +21,7 @@
             </div>
             <div class="well">
                 <div class="text-left">
-                    <p><a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add new Campground</a></p>
+                    <p><a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add new Comment</a></p>
                 </div>
                 <hr>
                 <% campground.comments.forEach((comment) => { %>
