Added functionality to automatically assign logged in user to comment

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -27,7 +27,7 @@
                 <% campground.comments.forEach((comment) => { %>
                     <div class="row">
                         <div class="col-md-12">
-                            ~<i><%= comment.author %> </i>
+                            ~<i><%= comment.author.username %> </i>
                             <span class="pull-right">10 days ago</span>
                             <p><%= comment.text %> </p>    
                         </div>
