--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -5,11 +5,13 @@
         <div class="container">
             <h1>Welcome to YelpCamp!</h1>
             <p>View our hand-picked campgrounds from all over the world!</p>
-            <p>
-                <a class="btn btn-primary btn-lg" href="/campgrounds/new"
-                    >Add new Campground</a
-                >
-            </p>
+            <% if (currentUser) { %>
+                <p>
+                    <a class="btn btn-primary btn-lg" href="/campgrounds/new"
+                        >Add new Campground</a
+                    >
+                </p>
+            <% } %>
         </div>
     </header>
 
@@ -40,8 +42,6 @@
         </div>
         <% }) %>
     </div>
-
-    <a href="/campgrounds/new">Add new campground</a>
 </div>
 
 <%- include('../partials/footer') %>
