--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -5,40 +5,50 @@
         <div class="col-md-3">
             <p class="lead">YelpCamp</p>
             <div class="list-group">
-                <li class="list-group-item active" >Info 1</li>
+                <li class="list-group-item active">Info 1</li>
                 <li class="list-group-item">Info 2</li>
                 <li class="list-group-item">Info 3</li>
             </div>
         </div>
         <div class="col-md-9">
             <div class="thumbnail">
-                <img class="img-responsive" src="<%= campground.image %>" alt="Campground Image" />
+                <img
+                    class="img-responsive"
+                    src="<%= campground.image %>"
+                    alt="Campground Image"
+                />
                 <div class="caption-full">
                     <h4 class="pull-right">$9.00/night</h4>
                     <h4><a><%= campground.name %></a></h4>
                     <p><%= campground.description %></p>
+                    <p>
+                        <em>Submitted by <%= campground.author.username %></em>
+                    </p>
                 </div>
             </div>
             <div class="well">
                 <div class="text-left">
-                    <p><a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add new Comment</a></p>
+                    <p>
+                        <a
+                            class="btn btn-success"
+                            href="/campgrounds/<%= campground._id %>/comments/new"
+                            >Add new Comment</a
+                        >
+                    </p>
                 </div>
-                <hr>
+                <hr />
                 <% campground.comments.forEach((comment) => { %>
-                    <div class="row">
-                        <div class="col-md-12">
-                            ~<i><%= comment.author.username %> </i>
-                            <span class="pull-right">10 days ago</span>
-                            <p><%= comment.text %> </p>    
-                        </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        ~<i><%= comment.author.username %> </i>
+                        <span class="pull-right">10 days ago</span>
+                        <p><%= comment.text %></p>
                     </div>
-                <% }) %> 
-
+                </div>
+                <% }) %>
             </div>
         </div>
     </div>
 </div>
-
-
 
 <%- include('../partials/footer') %>
