--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -34,6 +34,17 @@
                             href="/campgrounds/<%= campground._id %>/comments/new"
                             >Add new Comment</a
                         >
+                        <a
+                            class="btn btn-warning"
+                            href="/campgrounds/<%= campground._id %>/edit"
+                            >Edit Campground</a
+                        >
+                        <form id="delete-form"
+                            
+                            action="/campgrounds/<%= campground._id %>?_method=DELETE"
+                            method="POST"
+                            ><button class="btn btn-danger">Delete Campground</button></form
+                        >
                     </p>
                 </div>
                 <hr />
