Added functionality to update existing comment

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -35,17 +35,16 @@
                             >Add new Comment</a
                         >
                         <% if (currentUser && campground.author.id.equals(currentUser._id)) { %>
-                        <a
-                            class="btn btn-warning"
-                            href="/campgrounds/<%= campground._id %>/edit"
-                            >Edit Campground</a
-                        >
-                        <form id="delete-form"
-                            
-                            action="/campgrounds/<%= campground._id %>?_method=DELETE"
-                            method="POST"
-                            ><button class="btn btn-danger">Delete Campground</button></form
-                        >
+                            <a
+                                class="btn btn-warning btn-sm"
+                                href="/campgrounds/<%= campground._id %>/edit"
+                                >Edit Campground</a
+                            >
+                            <form id="delete-form"                               
+                                action="/campgrounds/<%= campground._id %>?_method=DELETE"
+                                method="POST"
+                                ><button class="btn btn-danger btn-sm">Delete Campground</button></form
+                            >
                         <% } %> 
                     </p>
                 </div>
@@ -56,6 +55,16 @@
                         ~<i><%= comment.author.username %> </i>
                         <span class="pull-right">10 days ago</span>
                         <p><%= comment.text %></p>
+                        <a
+                                class="btn btn-warning btn-sm"
+                                href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit"
+                                >Edit Comment</a
+                            >
+                            <form id="delete-form"                               
+                                action="/campgrounds/<%= campground._id %>/comments/<%= comment._ids %>?_method=DELETE"
+                                method="POST"
+                                ><button class="btn btn-danger btn-sm">Delete Comment</button></form
+                            >
                     </div>
                 </div>
                 <% }) %>
