--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -51,24 +51,27 @@
                 </div>
                 <hr />
                 <% campground.comments.forEach((comment) => { %>
-                <div class="row">
-                    <div class="col-md-12">
-                        ~<i><%= comment.author.username %> </i>
-                        <span class="pull-right">10 days ago</span>
-                        <p><%= comment.text %></p>
-                        <a
-                                class="btn btn-warning btn-sm"
-                                href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit"
-                                >Edit Comment</a
-                            >
-                            <form                              
-                                class="delete-form"
-                                action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE"
-                                method="POST"
-                                ><button class="btn btn-danger btn-sm">Delete Comment</button></form
-                            >
-                    </div>
-                </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                ~<i><%= comment.author.username %> </i>
+                                <span class="pull-right">10 days ago</span>
+                                <p><%= comment.text %></p>
+                                    <% if (currentUser && comment.author.id.equals(currentUser._id)) { %>
+                                <a
+                                    class="btn btn-warning btn-sm"
+                                    href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit"
+                                    >Edit Comment</a
+                                    >
+                                <form                              
+                                    class="delete-form"
+                                    action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE"
+                                    method="POST"
+                                    ><button class="btn btn-danger btn-sm">Delete Comment</button></form
+                                >
+                                <% } %>
+                            </div>
+                        </div>
+                    
                 <% }) %>
             </div>
         </div>
