--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -17,6 +17,17 @@
                 <div class="form-group">
                     <input
                         class="form-control"
+                        type="number"
+                        min="1"
+                        step="0.01"
+                        name="campground[price]"
+                        value="<%= campground.price %>"
+                    />
+                </div>
+
+                <div class="form-group">
+                    <input
+                        class="form-control"
                         type="text"
                         name="campground[description]"
                         value="<%= campground.description %>"
