--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -17,6 +17,17 @@
                 <div class="form-group">
                     <input
                         class="form-control"
+                        type="number"
+                        min="1"
+                        step="0.01"
+                        name="price"
+                        placeholder="price"
+                    />
+                </div>
+
+                <div class="form-group">
+                    <input
+                        class="form-control"
                         type="text"
                         name="description"
                         placeholder="description"
