Boostrap 4 style fix

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,9 +1,11 @@
 <%- include('../partials/header') %>
 
 <div class="container">
-    <h1 style="text-align: center">Create a new Campground</h1>
+    <h1 class="text-center h3 mb-3 font-weight-normal">
+        Create a new Campground
+    </h1>
     <div class="row">
-        <div style="width: 30%; margin: 30px auto">
+        <div style="width: 30%; margin: 10px auto">
             <form action="/campgrounds" method="POST">
                 <div class="form-group">
                     <input
