--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -11,6 +11,7 @@
                         type="text"
                         name="campground[name]"
                         value="<%= campground.name %>"
+                        placeholder="name"
                     />
                 </div>
 
@@ -22,6 +23,7 @@
                         step="0.01"
                         name="campground[price]"
                         value="<%= campground.price %>"
+                        placeholder="price"
                     />
                 </div>
 
@@ -31,6 +33,7 @@
                         type="text"
                         name="campground[description]"
                         value="<%= campground.description %>"
+                        placeholder="description"
                     />
                 </div>
 
@@ -40,6 +43,7 @@
                         type="text"
                         name="campground[image]"
                         value="<%= campground.image %>"
+                        placeholder="image URL"
                     />
                 </div>
                 <div class="form-group">
