--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -14,28 +14,23 @@
     </header>
 
     <div class="row">
-        <div>
-            <h3>Our Most Popular Campgrounds:</h3>
-        </div>
-    </div>
-
-    <div class="row">
         <% campgrounds.forEach(campground => { %>
-        <div class="col-md-3 col-sm-6">
-            <div class="img-thumbnail">
+        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="card">
                 <img
-                    class="img-fluid img-thumbnail"
+                    class="card-img-top"
                     src="<%= campground.image %>"
-                    alt="campground image"
+                    alt="<%= campground.name %>"
                 />
-                <div class="caption">
-                    <h4><%= campground.name %></h4>
+                <div class="card-body">
+                    <h5 class="card-title"><%= campground.name %></h5>
+
+                    <a
+                        href="/campgrounds/<%= campground._id %>"
+                        class="btn btn-primary"
+                        >More Info</a
+                    >
                 </div>
-                <a
-                    href="/campgrounds/<%= campground._id %>"
-                    class="btn btn-primary"
-                    >More Info</a
-                >
             </div>
         </div>
         <% }) %>
