--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,15 +1,35 @@
 <%- include('partials/header') %>
 
-<h1>Login Form</h1>
-
-<form action="/login" method="POST">
-    <input type="text" name="username" placeholder="username" />
-    <input type="password" name="password" placeholder="password" />
-    <button>Submit</button>
-</form>
-
-<li><a href="/register">Sign up!</a></li>
-<li><a href="/login">Login!</a></li>
-<li><a href="/logout">Logout!</a></li>
-
+<div class="row">
+    <div class="col-md-12">
+        <form class="form-signin" action="/login" method="POST">
+            <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+            <label for="inputEmail" class="sr-only">Email address</label>
+            <input
+                type="text"
+                id="inputUsername"
+                class="form-control"
+                name="username"
+                placeholder="Username"
+                required
+                autofocus
+            />
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input
+                type="password"
+                id="inputPassword"
+                class="form-control"
+                name="password"
+                placeholder="Password"
+                required
+            />
+            <button class="btn btn-lg btn-primary btn-block" type="submit">
+                Sign in
+            </button>
+        </form>
+        <div class="form-signin">
+            <a href="javascript:history.back()">Go Back</a>
+        </div>
+    </div>
+</div>
 <%- include('partials/footer') %>
