--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -12,6 +12,7 @@
                         name="campground[name]"
                         value="<%= campground.name %>"
                         placeholder="name"
+                        required
                     />
                 </div>
 
@@ -24,6 +25,7 @@
                         name="campground[price]"
                         value="<%= campground.price %>"
                         placeholder="price"
+                        required
                     />
                 </div>
 
@@ -34,6 +36,7 @@
                         name="campground[description]"
                         value="<%= campground.description %>"
                         placeholder="description"
+                        required
                     />
                 </div>
 
@@ -44,6 +47,7 @@
                         name="campground[image]"
                         value="<%= campground.image %>"
                         placeholder="image URL"
+                        required
                     />
                 </div>
                 <div class="form-group">
