--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -13,6 +13,7 @@
                         type="text"
                         name="name"
                         placeholder="name"
+                        required
                     />
                 </div>
 
@@ -24,6 +25,7 @@
                         step="0.01"
                         name="price"
                         placeholder="price"
+                        required
                     />
                 </div>
 
@@ -33,6 +35,7 @@
                         type="text"
                         name="description"
                         placeholder="description"
+                        required
                     />
                 </div>
 
@@ -42,6 +45,7 @@
                         type="text"
                         name="image"
                         placeholder="image url"
+                        required
                     />
                 </div>
                 <div class="form-group">
