--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,77 +2,90 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-3">
-            <p class="lead">YelpCamp</p>
-            <div class="list-group">
-                <li class="list-group-item active">Info 1</li>
-                <li class="list-group-item">Info 2</li>
-                <li class="list-group-item">Info 3</li>
-            </div>
-        </div>
-        <div class="col-md-9">
-            <div class="thumbnail">
+        <div class="col-sm-6">
+            <div class="card mb-6">
                 <img
-                    class="img-responsive"
+                    class="card-img-top"
                     src="<%= campground.image %>"
                     alt="Campground Image"
                 />
-                <div class="caption-full">
-                    <h4 class="pull-right">$<%= campground.price %>/night</h4>
-                    <h4><a><%= campground.name %></a></h4>
-                    <p><%= campground.description %></p>
+                <div class="card-body">
+                    <p class="float-right">$<%= campground.price %>/night</p>
+                    <h5 class="card-title"><%= campground.name %></h5>
+
                     <p>
                         <em>Submitted by <%= campground.author.username %></em>
                     </p>
+                    <hr />
+                    <p><%= campground.description %></p>
+                    <% if(currentUser &&
+                    campground.author.id.equals(currentUser._id)){ %>
+                    <a
+                        class="btn btn-warning"
+                        href="/campgrounds/<%= campground._id %>/edit"
+                        >Edit</a
+                    >
+                    <form
+                        action="/campgrounds/<%= campground._id %>?_method=DELETE"
+                        method="POST"
+                        class="delete-form"
+                    >
+                        <button class="btn btn-danger">Delete</button>
+                    </form>
+                    <% } %>
                 </div>
             </div>
-            <div class="well">
-                <div class="text-left">
-                    <p>
-                        <a
-                            class="btn btn-success"
-                            href="/campgrounds/<%= campground._id %>/comments/new"
-                            >Add new Comment</a
-                        >
-                        <% if (currentUser && campground.author.id.equals(currentUser._id)) { %>
-                            <a
-                                class="btn btn-warning btn-sm"
-                                href="/campgrounds/<%= campground._id %>/edit"
-                                >Edit Campground</a
-                            >
-                            <form 
-                                class="delete-form"                               
-                                action="/campgrounds/<%= campground._id %>?_method=DELETE"
-                                method="POST"
-                                ><button class="btn btn-danger btn-sm">Delete Campground</button></form
-                            >
-                        <% } %> 
-                    </p>
+        </div>
+        <div class="col-sm-6">
+            <div class="card-body">
+                <div class="text-right">
+                    <a
+                        class="btn btn-success"
+                        href="/campgrounds/<%= campground._id %>/comments/new"
+                        >Add New Comment</a
+                    >
                 </div>
                 <hr />
-                <% campground.comments.forEach((comment) => { %>
-                        <div class="row">
-                            <div class="col-md-12">
-                                ~<i><%= comment.author.username %> </i>
-                                <span class="pull-right">10 days ago</span>
-                                <p><%= comment.text %></p>
-                                    <% if (currentUser && comment.author.id.equals(currentUser._id)) { %>
-                                <a
-                                    class="btn btn-warning btn-sm"
-                                    href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit"
-                                    >Edit Comment</a
-                                    >
-                                <form                              
-                                    class="delete-form"
-                                    action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE"
-                                    method="POST"
-                                    ><button class="btn btn-danger btn-sm">Delete Comment</button></form
-                                >
-                                <% } %>
+                <div class="row">
+                    <% campground.comments.forEach(function(comment){ %>
+                    <div class="col-md-12 mb-2">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="float-left">
+                                    <p class="card-title">
+                                        <%= comment.author.username %>
+                                    </p>
+                                    <p class="card-text"><%= comment.text %></p>
+                                </div>
+                                <div class="float-right">
+                                    <% if(currentUser &&
+                                    comment.author.id.equals(currentUser._id)){
+                                    %>
+                                    <div class="float-right">
+                                        <a
+                                            href="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>/edit"
+                                            class="btn btn-sm btn-warning"
+                                            >EDIT</a
+                                        >
+                                        <form
+                                            class="delete-form"
+                                            action="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>?_method=DELETE"
+                                            method="POST"
+                                        >
+                                            <button
+                                                class="btn btn-sm btn-danger"
+                                            >
+                                                DELETE
+                                            </button>
+                                        </form>
+                                    </div>
+                                    <% } %>
+                                </div>
                             </div>
                         </div>
-                    
-                <% }) %>
+                    </div>
+                    <% }) %>
+                </div>
             </div>
         </div>
     </div>
