--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -11,6 +11,7 @@
                         type="text"
                         name="comment[text]"
                         value="<%= comment.text %>"
+                        required
                     />
                 </div>
                 <div class="form-group">
