--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -11,6 +11,7 @@
                         type="text"
                         name="comment[text]"
                         placeholder="text"
+                        required
                     />
                 </div>
                 <div class="form-group">
