--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="/">YelpCamp</a>
+            <a class="navbar-brand" href="/campgrounds">YelpCamp</a>
             <button
                 class="navbar-toggler"
                 type="button"
