Initial DEV environment commit

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -14,6 +14,12 @@
     </header>
 
     <div class="row">
+        <div>
+            <h3>Our Most Popular Campgrounds:</h3>
+        </div>
+    </div>
+
+    <div class="row">
         <% campgrounds.forEach(campground => { %>
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
             <div class="card">
