--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -13,12 +13,7 @@
         </div>
     </header>
 
-    <div class="row">
-        <div>
-            <h3>Our Most Popular Campgrounds:</h3>
-        </div>
-    </div>
-
+    <h4 class="mb-3">Our Most Popular Campgrounds:</h4>
     <div class="row">
         <% campgrounds.forEach(campground => { %>
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
