--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -6,6 +6,7 @@
         <div style="width: 30%; margin: 30px auto">
             <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
                 <div class="form-group">
+                    <label for="name">Name</label>
                     <input
                         class="form-control"
                         type="text"
@@ -17,6 +18,7 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="name">Price</label>
                     <input
                         class="form-control"
                         type="number"
@@ -30,17 +32,19 @@
                 </div>
 
                 <div class="form-group">
-                    <input
+                    <label for="name">Description</label>
+                    <textarea
                         class="form-control"
-                        type="text"
                         name="campground[description]"
-                        value="<%= campground.description %>"
                         placeholder="description"
+                        cols="30"
+                        rows="10"
                         required
-                    />
+                    ><%= campground.description %></textarea>
                 </div>
 
                 <div class="form-group">
+                    <label for="name">Image URL</label>
                     <input
                         class="form-control"
                         type="text"
@@ -55,8 +59,8 @@
                         Submit
                     </button>
                 </div>
+                <a href="/campgrounds/<%= campground._id %>">Go back</a>
             </form>
-            <a href="/campgrounds/<%= campground._id %>">Go back</a>
         </div>
     </div>
 </div>
