--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -5,9 +5,10 @@
         Create a new Campground
     </h1>
     <div class="row">
-        <div style="width: 30%; margin: 10px auto">
+        <div style="width: 30%; margin: 10px auto;">
             <form action="/campgrounds" method="POST">
                 <div class="form-group">
+                    <label for="name">Name</label>
                     <input
                         class="form-control"
                         type="text"
@@ -18,6 +19,7 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="name">Price</label>
                     <input
                         class="form-control"
                         type="number"
@@ -30,16 +32,19 @@
                 </div>
 
                 <div class="form-group">
-                    <input
+                    <label for="name">Description</label>
+                    <textarea
                         class="form-control"
-                        type="text"
                         name="description"
                         placeholder="description"
+                        cols="30"
+                        rows="10"
                         required
-                    />
+                    ></textarea>
                 </div>
 
                 <div class="form-group">
+                    <label for="name">Image URL</label>
                     <input
                         class="form-control"
                         type="text"
@@ -53,8 +58,8 @@
                         Submit
                     </button>
                 </div>
+                <a href="/campgrounds">Go back</a>
             </form>
-            <a href="/campgrounds">Go back</a>
         </div>
     </div>
 </div>
