--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -17,7 +17,7 @@
                         <em>Submitted by <%= campground.author.username %></em>
                     </p>
                     <hr />
-                    <p><%= campground.description %></p>
+                    <p class="card-text"><%= campground.description %></p>
                     <% if(currentUser &&
                     campground.author.id.equals(currentUser._id)){ %>
                     <a
@@ -35,6 +35,7 @@
                     <% } %>
                 </div>
             </div>
+            <a href="/campgrounds">Go Back</a>
         </div>
         <div class="col-sm-6">
             <div class="card-body">
@@ -52,10 +53,10 @@
                         <div class="card">
                             <div class="card-body">
                                 <div class="float-left">
-                                    <p class="card-title">
-                                        <%= comment.author.username %>
-                                    </p>
                                     <p class="card-text"><%= comment.text %></p>
+                                    <p class="card-text">
+                                        <em>~<%= comment.author.username %></em>
+                                    </p>
                                 </div>
                                 <div class="float-right">
                                     <% if(currentUser &&
