--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -1,18 +1,24 @@
 <%- include('../partials/header') %>
 
 <div class="container">
-    <h1 style="text-align: center">Edit Comment</h1>
+    <h1 style="text-align: center;">Edit Comment</h1>
     <div class="row">
-        <div style="width: 30%; margin: 30px auto">
-            <form action="/campgrounds/<%= campground_id %>/comments/<%= comment._id %>?_method=PUT" method="POST">
+        <div style="width: 30%; margin: 30px auto;">
+            <form
+                action="/campgrounds/<%= campground_id %>/comments/<%= comment._id %>?_method=PUT"
+                method="POST"
+            >
                 <div class="form-group">
-                    <input
+                    <label for="name">Text</label>
+                    <textarea
                         class="form-control"
-                        type="text"
                         name="comment[text]"
-                        value="<%= comment.text %>"
+                        cols="30"
+                        rows="10"
                         required
-                    />
+                    >
+<%= comment.text %></textarea
+                    >
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-block btn-primary">
