--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,20 +4,18 @@
     <div class="col-md-12">
         <form class="form-signin" action="/login" method="POST">
             <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-            <label for="inputEmail" class="sr-only">Email address</label>
+            <label for="username">Username</label>
             <input
                 type="text"
-                id="inputUsername"
                 class="form-control"
                 name="username"
                 placeholder="Username"
                 required
                 autofocus
             />
-            <label for="inputPassword" class="sr-only">Password</label>
+            <label for="password">Password</label>
             <input
                 type="password"
-                id="inputPassword"
                 class="form-control"
                 name="password"
                 placeholder="Password"
